{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "be362fd1-47c0-4f49-8a55-ec1221cc7f16",
            "actions": [
                {
                    "name": "WalkForward",
                    "type": "Button",
                    "id": "8b183aec-866a-4c2f-8696-d5d5bb3115a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WalkBackward",
                    "type": "Button",
                    "id": "883e4f43-28b0-4564-b5c8-fb27c1df5a6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "99fdda04-2914-443e-8d7e-0ffc50646498",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleTimeScale",
                    "type": "Button",
                    "id": "1361faf1-b463-41e6-9834-10c53efa0640",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f467f336-774e-4185-822b-623355c438f7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69890c1b-0097-4934-bb30-d0dc01e0f645",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1786b5b3-82bf-4ead-baad-0985728e174f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9520ea71-3dd8-41bc-8893-9315ac7915f1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleTimeScale",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}